# SODA-core-snoflake-custom-query-fastapi

./: Dockerfile  README.md  docker-compose.yaml  example_config.py  main.py  program_execution_flow.md  pyproject.toml  requirements-dev.txt  requirements.txt  soda-snowflake-guide.md  test_main.py
